--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,8 @@
 /*  your css code here. If applicable */
+#weatherData{
+	width:fit-content;
+	margin:20px;
+	padding:30px;
+	background-color:whitesmoke;
+	border-radius:10px
+}
